    - Added a test for actions (SEWI)
    - Re-enabled the beginner error check tests (SEWI)
    - Added missing File::Slurp dependency exposed by DMG installer (ADAMK)
    - Better focus transitions during search/replace, which should make
      them easier to work with quickly (ADAMK)
    - Rolled back function list improvements that were causing regressions (ADAMK)

0.50 2009.11.08
    - Fixed #686 DocBrowser launching Padre help (BRAMBLE)
    - Add initial version of a regex editor. (SZABGAB)
    - Fixed ticket:728 "Changing locale crashes Padre" (AZAWAWI)
    - Menubar is now configurable but still lacks a dialog for this (SEWI)
    - Beginner error checks are now configurable (turn each single one on
      or off) (SEWI)
    - Fixed ticket #710: share/doc/perlopref.pod missing author/license (AZAWAWI)
    - Added basic FTP-remote-editing capability (SEWI)
    - Initial version of "Find Method Declaration" (SZABGAB)
    - Timeouts an other options for Padre::File::HTTP and ::FTP are now
      configurable (SEWI)

0.49 2009.11.02
    - Fixed #691: Extract subroutine does not work for a script without
      subroutines (WAXHEAD)
    - Bugfix: The split-beginner-error check got false positives (SEWI)
    - Moved more menu actions to independent actions (SEWI)
    - Added a readonly flag to the taskbar (AGN)
    - Fixed #698: Syntax checker leaks files in tmpdir (SEWI)
    - Syntax checker now also shows a successful check (SEWI)
    - Added menu option to reload all open files (SEWI)
    - The current selection or document may be filtered through an external
      command now (SEWI)
    - Low-priority popup messages could be moved to the status bar by setting
      a preferences option (SEWI)
    - require IPC::Open2 and IPC::Open3 as they are both used in the code (SZABGAB)
    - Improved autocomplete (always) results (SEWI)
    - Run make and TDD-tests in one step (KTHAKORE)
    - Padre is now an XP-themed win32 application (AZAWAWI)