@@ -25,6 +25,7 @@ Changes for Perl Application Development and Refactoring Environment
     - Better focus transitions during search/replace, which should make
       them easier to work with quickly (ADAMK)
     - Rolled back function list improvements that were causing regressions (ADAMK)
+    - Added project sub-path intuition when saving new files (ADAMK)
 
 0.50 2009.11.08
     - Fixed #686 DocBrowser launching Padre help (BRAMBLE)
